--- a/views/food.ejs
+++ b/views/food.ejs
@@ -2,12 +2,79 @@
 <title>FoodView</title>
 
 <body>
-    <p><%= name %></p>
-    <h1>급식 확인</h1>
+    <div class="main">
+        <h1>
+            <%= date %>
+        </h1>
+
+        <table border="2">
+            <tr>
+                <th>조식</th>
+                <td>
+                    <%= morning %>
+                </td>
+            </tr>
+            <tr>
+                <th>중식</th>
+                <td>
+                    <%= lunch %>
+                </td>
+            </tr>
+            <tr>
+                <th>석식</th>
+                <td>
+                    <%= evening %>
+                </td>
+            </tr>
+        </table>
+    </div>
+
 </body>
 
 <style>
-    .h1 {
-        font-style: bold;
+
+    * {
+        word-break:keep-all;
+    }
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f7f7f7;
+    }
+
+    .main {
+        max-width: 600px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+        margin-top: 0;
+        font-weight: bold;
+        font-size: 24px;
+        color: #333;
+    }
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+    }
+
+    th, td {
+        padding: 10px;
+        text-align: left;
+    }
+
+    th {
+        background-color: #f2f2f2;
+    }
+
+    tr:nth-child(even) {
+        background-color: #f9f9f9;
     }
 </style>
