--- a/views/food_webview.ejs
+++ b/views/food_webview.ejs
@@ -34,7 +34,7 @@
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #f7f7f7;
+        background-color: #ffffff;
     }
 
     .main {
