--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
             <%= date %>
         </h1>
 
-        <iframe src="/request/<%= url %>" title="내용" width="100%" height="300px"></iframe>
+        <iframe src="/request/<%= url %>?mode=webview" title="내용" width="100%" height="300px"></iframe>
 
         <button>
 
